<resources>
    <string name="default_web_client_id">167690209945-956ubcldetpj1olmfr0163h8oodbiame.apps.googleusercontent.com</string>
    <string name="app_name">YumDay</string>
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="tv_confirm_password">Confirm Password</string>
    <string name="tv_email">E-mail</string>
    <string name="btn_signup">Signup</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_google_login">Continue Using Google</string>
    <string name="tv_name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="or">Or</string>
    <string name="guest_continue">Countinue as a guest</string>
    <string name="registeration">Registeration</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="enter_pass">Enter your password</string>
    <string name="enter_name">Enter your name</string>
    <string name="confirm_pass">Confirm your password</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="recipe_inspiration">Recipe Inspiration</string>
    <string name="inspire">Recipe of the day</string>
    <string name="categories">Categories</string>
    <string name="cuisines">WorldWide Cuisines</string>
    <string name="search_hint">Search by Category, Ingredient or Area</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="remove_from_plan">Remove From Plan</string>
    <string name="backup">Backup</string>
    <string name="recipes">Recipes</string>
    <string name="saved_recipes">My Saved Recipes</string>
    <string name="restore">Restore</string>
    <string name="show_favourites">Show All Favourites</string>
    <string name="view_your_plan">View Your Plan</string>
    <string name="ing">choose Recipe based on your preferred ingredient</string>
    <string name="cat">Various categories to choose from</string>
</resources>