<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="427dp"
    android:layout_height="952dp"
    android:background="@drawable/backgroundimg"
    android:padding="10dp"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/et_email_login"
        style="@style/Widget.App.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toTopOf="@+id/et_password_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password_login"
        style="@style/Widget.App.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tv_email"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_email_login"
        app:layout_constraintEnd_toStartOf="@+id/et_email_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_email_login" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tv_password"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_password_login"
        app:layout_constraintEnd_toStartOf="@+id/et_password_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_password_login" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.Custom.ElevatedButton.Primary"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="310dp"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>